--- a/I_MybatisPlus_Study/src/main/resources/application.yaml
+++ b/I_MybatisPlus_Study/src/main/resources/application.yaml
@@ -16,6 +16,10 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-delete-field: deleted #配置逻辑删除字段
+  configuration:
+    default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
+
 knife4j:
   enable: true
   openapi:
