--- a/II_hmall/pom.xml
+++ b/II_hmall/pom.xml
@@ -16,6 +16,8 @@
     <modules>
         <module>hm-common</module>
         <module>hm-service</module>
+        <module>item-service</module>
+        <module>cart-service</module>
     </modules>
 
     <properties>
