--- a/II_hmall/pom.xml
+++ b/II_hmall/pom.xml
@@ -18,6 +18,7 @@
         <module>hm-service</module>
         <module>item-service</module>
         <module>cart-service</module>
+        <module>hm-api</module>
     </modules>
 
     <properties>
@@ -83,6 +84,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
     </dependencies>
 
