--- a/II_hmall/hm-api/pom.xml
+++ b/II_hmall/hm-api/pom.xml
@@ -32,6 +32,11 @@
             <version>1.5.20</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.heima</groupId>
+            <artifactId>hm-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
