--- a/II_hmall/cart-service/pom.xml
+++ b/II_hmall/cart-service/pom.xml
@@ -76,6 +76,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
 
 
     </dependencies>
